--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,6 +5,7 @@
   width: 100%;
   height: 20vh;
   background-color: antiquewhite;
+  gap: '10px';
 }
 
 .userInfo {
@@ -46,7 +47,7 @@
   gap: 20px;
   justify-content: center;
   padding: 20px;
-  background-color: gray;
+  background-color: antiquewhite;
 }
 
 
